# erased-discriminant

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: test.rs
