[package]
name = "erased-discriminant"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Type-erased version of core::mem::Discriminant<T>"
documentation = "https://docs.rs/erased-discriminant"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/erased-discriminant"

[dependencies]
typeid = "1"
