[package]
name = "erased-discriminant"
version = "1.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["no-std"]
description = "Type-erased version of core::mem::Discriminant<T>"
documentation = "https://docs.rs/erased-discriminant"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/erased-discriminant"
rust-version = "1.56"

[dependencies]
typeid = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
